Some fix + The logging system has been rewritten
