# src/main/java/it/academy/cursebackspring/controllers/UserController.java
@@ -8,6 +8,7 @@ import it.academy.cursebackspring.dto.response.OrderItemsDTO;
 import it.academy.cursebackspring.dto.response.OrdersDTO;
 import it.academy.cursebackspring.dto.response.UserDTO;
 import it.academy.cursebackspring.dto.response.UserReviewsDTO;
+import it.academy.cursebackspring.models.User;
 import it.academy.cursebackspring.services.OrderService;
 import it.academy.cursebackspring.services.ReviewService;
 import it.academy.cursebackspring.services.UserService;
@@ -17,14 +18,14 @@ import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequiredArgsConstructor
 @Validated
-@RequestMapping("/api/v1/user/{userId}")
+@RequestMapping("/api/v1/user")
 public class UserController {
 
     private final UserService userService;
@@ -32,47 +33,30 @@ public class UserController {
     private final OrderService orderService;
 
     @GetMapping()
-    @PreAuthorize(value = "#userId == authentication.principal.id")
-    public ResponseEntity<UserDTO> getUser(@PathVariable
-                                           @Valid
-                                           @NotNull
-                                           @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION)
-                                           Long userId) {
+    public ResponseEntity<UserDTO> getUser() {
+        Long userId = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
         UserDTO userDTO = userService.getUserById(userId);
         return ResponseEntity.ok(userDTO);
     }
 
     @GetMapping("/reviews")
-    @PreAuthorize(value = "#userId == authentication.principal.id")
-    public ResponseEntity<UserReviewsDTO> getUserReviews(@PathVariable
-                                                         @Valid
-                                                         @NotNull
-                                                         @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION) Long userId,
-                                                         @Valid GetUserReviewsDTO dto) {
+    public ResponseEntity<UserReviewsDTO> getUserReviews(@Valid GetUserReviewsDTO dto) {
+        Long userId = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
         dto.setUserId(userId);
         UserReviewsDTO reviewsDTO = reviewService.getAllUserReviews(dto);
         return ResponseEntity.ok(reviewsDTO);
     }
 
     @GetMapping("/orders")
-    @PreAuthorize(value = "#userId == authentication.principal.id")
-    public ResponseEntity<OrdersDTO> getUserOrders(@PathVariable
-                                                   @Valid
-                                                   @NotNull
-                                                   @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION) Long userId,
-                                                   GetUserOrderPageDTO dto) {
+    public ResponseEntity<OrdersDTO> getUserOrders(@Valid GetUserOrderPageDTO dto) {
+        Long userId = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
         dto.setUserId(userId);
         OrdersDTO ordersDTO = orderService.getListOfUserOrders(dto);
         return ResponseEntity.ok(ordersDTO);
     }
 
     @GetMapping("/orders/{orderId}/items")
-    @PreAuthorize(value = "#userId == authentication.principal.id")
-    public ResponseEntity<OrderItemsDTO> getUserOrderItems(@PathVariable(name = "userId")
-                                                           @Valid
-                                                           @NotNull
-                                                           @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION) Long userId,
-                                                           @PathVariable(name = "orderId")
+    public ResponseEntity<OrderItemsDTO> getUserOrderItems(@PathVariable(name = "orderId")
                                                            @Valid
                                                            @NotNull
                                                            @Min(value = 1, message = Constants.ORDER_ID_VALIDATION_EXCEPTION) Long orderId,
@@ -83,23 +67,16 @@ public class UserController {
     }
 
     @PutMapping("/update")
-    @PreAuthorize(value = "#userId == authentication.principal.id")
-    public ResponseEntity<?> updateUserInfo(@PathVariable
-                                            @Valid
-                                            @NotNull
-                                            @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION) Long userId,
-                                            @RequestBody @Valid UpdateUserDTO dto) {
+    public ResponseEntity<?> updateUserInfo(@RequestBody @Valid UpdateUserDTO dto) {
+        Long userId = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
         dto.setId(userId);
         userService.updateUser(dto);
         return ResponseEntity.ok().build();
     }
 
     @DeleteMapping("/delete")
-    @PreAuthorize("#userId == authentication.principal.id")
-    public ResponseEntity<?> deleteUser(@PathVariable(name = "userId")
-                                        @Valid
-                                        @NotNull
-                                        @Min(value = 1, message = Constants.USER_ID_VALIDATION_EXCEPTION) Long userId) {
+    public ResponseEntity<?> deleteUser() {
+        Long userId = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
         userService.deleteUser(userId);
         return ResponseEntity.ok().build();
     }
